[package]
name = "ctrnn"
version = "0.1.1"
edition = "2021"
description = "Supervised and unsupervised CTRNNs with parallelism"
license = "MIT"

[dependencies]
bincode = "1.3.3"
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zmq = "0.10.0"
